
cmake_minimum_required(VERSION 3.5)

project(XREngine VERSION 0.1)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(BUILD_SHARED_LIBS OFF)



set(XRE_ROOT_DIR "${CMAKE_CURRENT_SOURCE_DIR}")
foreach( OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES} )
    string( TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG )
    set( CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_SOURCE_DIR}/lib )
    set( CMAKE_LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_SOURCE_DIR}/lib )
    set( CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_SOURCE_DIR}/bin )
endforeach( OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES )

set(ENGINE_ROOT_DIR "${XRE_ROOT_DIR}/XRengine")
set(EDITOR_ROOT_DIR "${XRE_ROOT_DIR}/XRE-Editor")
set(THIRD_PARTY_DIR "${ENGINE_ROOT_DIR}/3rdparty")
set(ENGINE_SRC_DIR "${ENGINE_ROOT_DIR}/src")


add_subdirectory(${THIRD_PARTY_DIR}/Glad)
add_subdirectory(${THIRD_PARTY_DIR}/GLFW)
add_subdirectory(${THIRD_PARTY_DIR}/ImGui)
add_subdirectory(${THIRD_PARTY_DIR}/JoltPhysics/Build)
add_subdirectory(${THIRD_PARTY_DIR}/openal-soft)


add_subdirectory(XRengine)
add_subdirectory(XRE-Editor)
add_subdirectory(XRE-SANDBOX)
add_subdirectory(XRE-Launcher)

set_property ( DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT XRE-Editor )
